--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Example Company</h1>
+            <h1>JV Wealth Advisory</h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -60,9 +60,12 @@
     </section>
 
     <section id="about" class="section">
-        <div class="container">
-            <h2>About Us</h2>
-            <p>Example Company was founded in 20XX, dedicated to providing the best products and services.</p>
+        <div class="aboutus">
+            <h2>Welcome to JV Wealth Advisory</h2>
+            
+            <div class="aboutus_background">
+                <p>Founded in 2019 and based in Johor, Malaysia, JV Wealth Advisory is committed to providing top-tier financial and wealth management services. Our mission is to empower our clients with the knowledge and tools necessary to achieve financial security and peace of mind.</p>
+            </div>
         </div>
     </section>
 
