--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div class="aboutus_background">
                 <p>Founded in 2019 and based in Johor, Malaysia, JV Wealth Advisory is committed to providing top-tier financial and wealth management services. Our mission is to empower our clients with the knowledge and tools necessary to achieve financial security and peace of mind.</p>
             </div>
+            <img src="2.png" alt="Image 1">
         </div>
     </section>
 
