--- a/index.html
+++ b/index.html
@@ -60,13 +60,63 @@
     </section>
 
     <section id="about" class="section">
-        <div class="aboutus">
-            <h2>Welcome to JV Wealth Advisory</h2>
-            
-            <div class="aboutus_background">
-                <p>Founded in 2019 and based in Johor, Malaysia, JV Wealth Advisory is committed to providing top-tier financial and wealth management services. Our mission is to empower our clients with the knowledge and tools necessary to achieve financial security and peace of mind.</p>
+        <div class="about1">
+            <div class="aboutus">
+                <h2>Welcome to JV Wealth Advisory</h2>
+                <div class="aboutus_background1">
+                    <div class="aboutus_background">
+                        <p>Founded in 2019 and based in Johor, Malaysia, JV Wealth Advisory is committed to providing top-tier financial and wealth management services. Our mission is to empower our clients with the knowledge and tools necessary to achieve financial security and peace of mind.</p>
+                    </div>
+                    <img src="2.png" alt="Image 1">
+                </div>
             </div>
-            <img src="2.png" alt="Image 1">
+        </div>
+        <div class="about2">
+            <div class="vision_mission">
+                <div class="vision">
+                    <h2>Vision</h2>
+                    <p>Help People Achieve Their Dreams Through Smart Wealth Distribution </p>
+                </div>
+                <div class="straight_line"></div>
+                <div class="mission">
+                    <h2>Mission</h2>
+                    <p>Create Value And Helps People Who Believe in Finance Tools By Our Professional Team</p>
+                </div>
+            </div>
+            <div><hr></div>
+            <div class="value">
+                <h2>Value</h2>
+                <ul>
+                    <li>
+                        Caring: Active caring, mutual support 
+                    </li>
+                    <li>
+                        Trustworthy: Honest and upright, keeping promises
+                    </li>
+                    <li>
+                        Professional: Courageous and innovative, precise and excellent
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="about3">
+            <div class="achievement">
+                <h2>Our Acheivement</h2>
+                <p>blablabla</p>
+            </div>
+        </div>
+        <div class="card_container">
+            <div class="card">
+                <img src="jvlogo.png" alt="">
+                <div class="card_info">
+                    <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
+                    <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
+                    <div class="card_info1">
+                        <p>+6011 - 1677 2315  |  +6012 - 720 0251</p>
+                        <p> Jvwealthadvisory@gmail.com</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -76,13 +126,6 @@
         </div>
     </footer>
     
-    <script>
-        // Load the header
-        fetch('header.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('header-container').innerHTML = data;
-            });
-    </script>
+   
 </body>
 </html>
