--- a/index.html
+++ b/index.html
@@ -3,31 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="card.css">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="header.css">
-    <title>JV Wealth Advisory</title>
+    <title>Home</title>
 </head>
+
 <body>
     <header>
         <div class="container">
             <h1>JV Wealth Advisory</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="services.html">Our Services</a></li>
-                    <li><a href="contact_us.html">Contact Us</a></li>
+                    <li><a href="index.html" class="nav-link" id="homelink">Home</a></li>
+                    <li>
+                        <a href="#" class="nav-link" id="aboutUsLink">About Us</a>
+                        <ul id="dropdownMenu" class="dropdown">
+                            <li><a href="our_company.html">Our Company</a></li>
+                            <li><a href="v_m_v.html">Vision, Mission & Value</a></li>
+                            <li><a href="achievement.html">Achievement</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="services.html" class="nav-link" id="servicesLink">Our Services</a></li>
+                    <li><a href="contact_us.html" class="nav-link" id="contactLink">Contact Us</a></li>                    
+                    <li>
+                        <div class="language-switch">
+                            <a href="index_zh.html" id="languageButton">中文</a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
     
-    <!-- Language switch button -->
-    <div class="language-switch">
-        <a href="index_zh.html" id="languageButton">中文</a>
-    </div>
-
-    <section id="home" class="section">
+    <div id="home" class="section">
+        <div class="background"></div>
         <div class="carousel">
             <input type="radio" name="carousel" id="slide1" checked>
             <input type="radio" name="carousel" id="slide2">
@@ -36,10 +46,10 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item">
-                    <img src="2.png" alt="Image 1">
+                    <img src="5.jpg" alt="Image 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="3.png" alt="Image 2">
+                    <img src="5.jpg" alt="Image 2">
                 </div>
                 <div class="carousel-item">
                     <img src="4.jpg" alt="Image 3">
@@ -57,75 +67,167 @@
             <button class="prev" onclick="document.getElementById('slide1').checked ? document.getElementById('slide3').checked = true : document.querySelector('input[name=carousel]:checked').previousElementSibling.checked = true;">&#10094;</button>
             <button class="next" onclick="document.getElementById('slide3').checked ? document.getElementById('slide1').checked = true : document.querySelector('input[name=carousel]:checked').nextElementSibling.checked = true;">&#10095;</button>
         </div>
-    </section>
+        <div class="homecontent">
+            <h2>Plan ahead and navigate safely</h2>
+            <p>Planning ahead is an act of wisdom because life is full of unpredictable risks. Insurance provides safe navigation for your every choice, ensuring you face challenges without worries</p>
+        </div>
+    </div>
 
-    <section id="about" class="section">
-        <div class="about1">
-            <div class="aboutus">
-                <h2>Welcome to JV Wealth Advisory</h2>
-                <div class="aboutus_background1">
-                    <div class="aboutus_background">
-                        <p>Founded in 2019 and based in Johor, Malaysia, JV Wealth Advisory is committed to providing top-tier financial and wealth management services. Our mission is to empower our clients with the knowledge and tools necessary to achieve financial security and peace of mind.</p>
+    <div class="our_company_summary">
+        <h2>JV Wealth are committed to
+            <br><span class="green">Your Life and Your Future</span></h2>
+        <p>JV Wealth Advisory is a company dedicated to providing comprehensive financial planning and wealth management services to clients. Headquartered in Taman Johor Jaya, Johor Bahru, Malaysia, the company is ....... </p>
+        <div class="custom-hr">
+            <span> <a href="our_company.html">More details</a></span> <!-- 可放置文字或留空 -->
+        </div>
+        <div class="data_container">
+            <p class="data"><span class="green">13</span><br>Year of Experience</p>
+            <p class="data"><span class="green">5</span><br>Strategic Partner</p>
+            <p class="data"><span class="green">10++</span><br>Professional Agent</p>
+        </div>
+        <div class="img-container">
+            <img src="6.png" alt="">
+        </div>
+    </div>
+
+    <div class="our_product_and_services_summary">
+        <div class="p_s_summary_content">
+            <h2>Our <span class="green">Products</span> and <span class="green">Services</span></h2>
+            <p>JV Wealth Advisory provide financial planning, healthcare planning, legacy planning and claim support ........</p>
+        </div>
+
+        <div class="p_s_big_container">
+            <div class="custom-hr">
+                <span> <a href="services.html">More details</a></span> <!-- 可放置文字或留空 -->
+            </div>
+            <div class="p_s_container">
+                <div class="p_s">
+                    <h2>Financial Planning</h2>
+                    <img src="5.jpg" alt="">
+                </div>
+                <div class="p_s">
+                    <h2>Healthcare Planning</h2>
+                    <img src="5.jpg" alt="">
+                </div>
+                <div class="p_s">
+                    <h2>Legacy Planning</h2>
+                    <img src="5.jpg" alt="">
+                </div>
+                <div class="p_s">
+                    <h2>Claim Support</h2>
+                    <img src="5.jpg" alt="">
+                </div>    
+            </div>
+        </div>
+    </div>
+
+    <div class="career_summary">
+        <div class="career_summary_content">
+            <h2>Care<span class="green">er</span></h2>
+            <p>At JV Wealth Advisory, we are a team full of opportunities, dedicated to innovation and growth. Whether you're an experienced expert or an ambitious newcomer, we offer a platform for your development. Join us, collaborate with top financial professionals, challenge yourself, and achieve your career aspirations. Together, let's create a brighter future! ....... </p>
+            <div class="custom-hr">
+                <span> <a href="career.html">More details</a></span> <!-- 可放置文字或留空 -->
+            </div>
+        </div>
+        <img src="7.png" alt="">
+    </div>
+
+    <div class="facebook_comment">
+        <img src="8.png" alt="">
+        <div class="comment_content">
+            <h2>What Our Customers Say <span class="green">About Us</span></h2>
+            <div class="iframe-slider">
+                <div class="iframe-container">
+                    <div class="iframe-wrapper">
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fcheng.meparu%2Fposts%2Fpfbid02o3HFPugeXVSjBuMZzxNd2yE2Ai2tbhh2EuUenBXTTu3pTZbEG7DaTAAd9sLyA4Mtl&show_text=true&width=500" width="500" height="193" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fwenchain.clara%2Fposts%2Fpfbid0qpUbKWDG4vZpYBruvDCYW12bKq38KYHAY9aftH8Mvbp8mheSVifSPb6W6o2tRjCMl&show_text=true&width=500" width="500" height="169" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fyyyfchan%2Fposts%2Fpfbid026qkjLPVEby6vx77rTnVVQX3VhFfYpYAxvtapxvicoK1xVRDdcct4d5nd4PfrjEnhl&show_text=true&width=500" width="500" height="169" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fholygege%2Fposts%2Fpfbid027fv79mKr1fEyddFFtH5BuVnujyn9Z1FhndLFSNc952V16FPeNdi119eEFWiefp7Bl&show_text=true&width=500" width="500" height="188" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fholygege%2Fposts%2Fpfbid027fv79mKr1fEyddFFtH5BuVnujyn9Z1FhndLFSNc952V16FPeNdi119eEFWiefp7Bl&show_text=true&width=500" width="500" height="188" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
-                    <img src="2.png" alt="Image 1">
+                </div>
+            </div>
+            <div class="arrow">
+                <button class="prev" onclick="slideIframes(-1)">&#10094;</button>
+                <button class="next" onclick="slideIframes(1)">&#10095;</button>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="card_container">
+        <div class="card">
+            <img src="jvlogo.png" alt="">
+            <div class="card_info">
+                <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
+                <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
+                <div class="card_info1">
+                    <p>+6011 - 1677 2315  |  +6012 - 720 0251</p>
+                    <p> Jvwealthadvisory@gmail.com</p>
                 </div>
             </div>
         </div>
-        <div class="about2">
-            <div class="vision_mission">
-                <div class="vision">
-                    <h2>Vision</h2>
-                    <p>Help People Achieve Their Dreams Through Smart Wealth Distribution </p>
-                </div>
-                <div class="straight_line"></div>
-                <div class="mission">
-                    <h2>Mission</h2>
-                    <p>Create Value And Helps People Who Believe in Finance Tools By Our Professional Team</p>
-                </div>
-            </div>
-            <div><hr></div>
-            <div class="value">
-                <h2>Value</h2>
-                <ul>
-                    <li>
-                        Caring: Active caring, mutual support 
-                    </li>
-                    <li>
-                        Trustworthy: Honest and upright, keeping promises
-                    </li>
-                    <li>
-                        Professional: Courageous and innovative, precise and excellent
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="about3">
-            <div class="achievement">
-                <h2>Our Acheivement</h2>
-                <p>blablabla</p>
-            </div>
-        </div>
-        <div class="card_container">
-            <div class="card">
-                <img src="jvlogo.png" alt="">
-                <div class="card_info">
-                    <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
-                    <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
-                    <div class="card_info1">
-                        <p>+6011 - 1677 2315  |  +6012 - 720 0251</p>
-                        <p> Jvwealthadvisory@gmail.com</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    </div>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Example Company. All rights reserved.</p>
+            <p>&copy; 2024 JV Wealth Advisory. All rights reserved.</p>
         </div>
     </footer>
     
-   
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const aboutUsLink = document.getElementById('aboutUsLink');
+            const dropdownMenu = document.getElementById('dropdownMenu');
+            let isMenuVisible = false;
+
+            // Toggle dropdown menu
+            aboutUsLink.addEventListener('click', function (e) {
+                e.preventDefault();
+                isMenuVisible = !isMenuVisible;
+                dropdownMenu.style.display = isMenuVisible ? 'block' : 'none';
+            });
+
+            // Close dropdown when clicking outside
+            document.addEventListener('click', function (event) {
+                if (!aboutUsLink.contains(event.target) && !dropdownMenu.contains(event.target)) {
+                    dropdownMenu.style.display = 'none';
+                    isMenuVisible = false;
+                }
+            });
+
+            // Add active class to the current page's nav link
+            const currentPage = window.location.href.split('/').pop(); // 获取当前页面文件名
+            const navLinks = document.querySelectorAll('.nav-link');
+
+            navLinks.forEach(link => {
+                if (link.getAttribute('href') === currentPage || currentPage === '' && link.getAttribute('href') === 'index.html') {
+                    link.classList.add('active');
+                }
+            });
+        });
+
+        let currentIndex = 0;
+
+        function slideIframes(direction) {
+            const iframeWrapper = document.querySelector('.iframe-wrapper');
+            const iframes = document.querySelectorAll('.iframe-wrapper iframe');
+            const iframeWidth = iframes[0].offsetWidth + 20; // Include margin
+            const maxIndex = iframes.length - 3; // Show two iframes at once
+
+            currentIndex += direction;
+
+            // Limit the sliding to the bounds
+            if (currentIndex < 0) {
+                currentIndex = 0;
+            } else if (currentIndex > maxIndex) {
+                currentIndex = maxIndex;
+            }
+
+            // Move the iframes
+            iframeWrapper.style.transform = `translateX(-${currentIndex * iframeWidth}px)`;
+        }
+    </script>
 </body>
 </html>
