--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="stylesheet" type="text/css" href="header.css">
     <title>Home</title>
 </head>
 
@@ -26,6 +26,8 @@
                     </li>
                     <li><a href="services.html" class="nav-link" id="servicesLink">Our Services</a></li>
                     <li><a href="contact_us.html" class="nav-link" id="contactLink">Contact Us</a></li>                    
+                    <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>                    
+
                     <li>
                         <div class="language-switch">
                             <a href="index_zh.html" id="languageButton">中文</a>
