--- a/v_m_v.html
+++ b/v_m_v.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="v_m_v.css">
     <link rel="stylesheet" type="text/css" href="header.css">
+    <link rel="stylesheet" type="text/css" href="card.css">
+
     <title>Document</title>
 </head>
    
@@ -25,6 +27,8 @@
                     </li>
                     <li><a href="services.html" class="nav-link" id="servicesLink">Our Services</a></li>
                     <li><a href="contact_us.html" class="nav-link" id="contactLink">Contact Us</a></li>                    
+                    <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>                    
+
                     <li>
                         <div class="language-switch">
                             <a href="index_zh.html" id="languageButton">中文</a>
@@ -35,6 +39,14 @@
         </div>
     </header>
     
+    <div class="v_m_v_title">
+        <img src="9.png" alt="">
+        <h2>Our Company</h2>
+        <p>About us</p>
+
+    </div>
+
+
     <div class="about2">
         <div class="vision_mission_value">
             <div class="vision">
@@ -74,6 +86,19 @@
         </div>
     </div>
     
+    <div class="card_container"></div>
+        <div class="card">
+            <img src="jvlogo.png" alt="">
+            <div class="card_info">
+                <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
+                <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
+                <div class="card_info1">
+                    <p>+6011 - 1677 2315  |  +6012 - 720 0251</p>
+                    <p> Jvwealthadvisory@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <div class="container">
             <p>&copy; 2024 Example Company. All rights reserved.</p>
