--- a/achievement.html
+++ b/achievement.html
@@ -25,6 +25,8 @@
                     </li>
                     <li><a href="services.html" class="nav-link" id="servicesLink">Our Services</a></li>
                     <li><a href="contact_us.html" class="nav-link" id="contactLink">Contact Us</a></li>                    
+                    <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>                    
+
                     <li>
                         <div class="language-switch">
                             <a href="index_zh.html" id="languageButton">中文</a>
@@ -35,6 +37,19 @@
         </div>
     </header>
 
+    <div class="card_container">
+        <div class="card">
+            <img src="jvlogo.png" alt="">
+            <div class="card_info">
+                <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
+                <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
+                <div class="card_info1">
+                    <p>+6011 - 1677 2315  |  +6012 - 720 0251</p>
+                    <p> Jvwealthadvisory@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <footer>
         <div class="container">
