--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
     </header>
 
     
-    <div class="card_container"></div>
+    <div class="card_container">
         <div class="card">
             <img src="jvlogo.png" alt="">
             <div class="card_info">
