--- a/contact_us.html
+++ b/contact_us.html
@@ -38,7 +38,7 @@
         </div>
     </header>
 
-    <div class="card_container"></div>
+    <div class="card_container">
         <div class="card">
             <img src="jvlogo.png" alt="">
             <div class="card_info">
