--- a/our_company.html
+++ b/our_company.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div class="card_container"></div>
+    <div class="card_container">
         <div class="card">
             <img src="jvlogo.png" alt="">
             <div class="card_info">
@@ -87,7 +87,7 @@
             </div>
         </div>
     </div>
-    
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Example Company. All rights reserved.</p>
