--- a/v_m_v.html
+++ b/v_m_v.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     
-    <div class="card_container"></div>
+    <div class="card_container">
         <div class="card">
             <img src="jvlogo.png" alt="">
             <div class="card_info">
