--- a/our_company.html
+++ b/our_company.html
@@ -39,7 +39,7 @@
     </header>
 
     <div class="our_company_title">
-        <img src="9.png" alt="">
+        <img src="picture/9.png" alt="">
         <h2>Our Company</h2>
         <p>About us</p>
     </div>
@@ -131,6 +131,5 @@
             }
         });
     </script>
-</body>
 </body>
 </html>
