--- a/services.html
+++ b/services.html
@@ -38,6 +38,32 @@
         </div>
     </header>
 
+    <section class="services">
+        <div class="container">
+          <h2 class="serviceh2">What We Do</h2>
+          <h3 class="serviceh3">Our Service</h3>
+          <p>JV Wealth Advisory provides...</p>
+          <div class="services-grid">
+            <div class="service-item">
+              <img src="picture/path-to-financial-icon.png" alt="Financial Planning">
+              <p>Financial Planning</p>
+            </div>
+            <div class="service-item">
+              <img src="picture/path-to-healthcare-icon.png" alt="Healthcare Planning">
+              <p>Healthcare Planning</p>
+            </div>
+            <div class="service-item">
+              <img src="picture/path-to-legacy-icon.png" alt="Legacy Planning">
+              <p>Legacy Planning</p>
+            </div>
+            <div class="service-item">
+              <img src="picture/path-to-claim-support-icon.png" alt="Claim Support">
+              <p>Claim Support</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      
     
     <div class="card_container">
         <div class="card">
