--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item">
-                    <img src="5.jpg" alt="Image 1">
+                    <img src="pictures/jv_group.jpg" alt="Image 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="5.jpg" alt="Image 2">
+                    <img src="pictures/jv_group.jpg" alt="Image 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="4.jpg" alt="Image 3">
+                    <img src="pictures/jv_group.jpg" alt="Image 3">
                 </div>
                 <!-- Add more carousel-item divs for additional images -->
             </div>
@@ -88,7 +88,7 @@
             <p class="data"><span class="green">10++</span><br>Professional Agent</p>
         </div>
         <div class="img-container">
-            <img src="6.png" alt="">
+            <img src="pictures/our-company_sumary.png" alt="">
         </div>
     </div>
 
@@ -131,11 +131,11 @@
                 <span> <a href="career.html">More details</a></span> <!-- 可放置文字或留空 -->
             </div>
         </div>
-        <img src="7.png" alt="">
+        <img src="pictures/career_bg.png" alt="">
     </div>
 
     <div class="facebook_comment">
-        <img src="8.png" alt="">
+        <img src="pictures/rates.png" alt="">
         <div class="comment_content">
             <h2>What Our Customers Say <span class="green">About Us</span></h2>
             <div class="iframe-slider">
@@ -160,7 +160,7 @@
 
     <div class="card_container">
         <div class="card">
-            <img src="jvlogo.png" alt="">
+            <img src="pictures/jvlogo.png" alt="">
             <div class="card_info">
                 <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
                 <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
