--- a/our_company.html
+++ b/our_company.html
@@ -39,7 +39,7 @@
     </header>
 
     <div class="our_company_title">
-        <img src="picture/9.png" alt="">
+        <img src="pictures/about_us_bg.png" alt="">
         <h2>Our Company</h2>
         <p>About us</p>
     </div>
@@ -76,7 +76,7 @@
 
     <div class="card_container">
         <div class="card">
-            <img src="jvlogo.png" alt="">
+            <img src="pictures/jvlogo.png" alt="">
             <div class="card_info">
                 <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
                 <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
