--- a/v_m_v.html
+++ b/v_m_v.html
@@ -88,7 +88,7 @@
     
     <div class="card_container">
         <div class="card">
-            <img src="jvlogo.png" alt="">
+            <img src="pictures/jvlogo.png" alt="">
             <div class="card_info">
                 <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
                 <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
