--- a/career.html
+++ b/career.html
@@ -38,6 +38,149 @@
         </div>
     </header>
 
+    <div class="admin_sales">
+        <div class="admin_sales_content">
+            <h2>Admin <span class="green">Sales</span></h2>
+            <p>Responsibilities:
+                <ul>
+                    <li>
+                        Support the sales team by managing schedules, processing orders, and handling customer inquiries.
+                    </li>
+                    <li>
+                        Maintain sales records, prepare reports, and update the CRM system.
+                    </li>
+                    <li>
+                        Coordinate with other departments to ensure smooth workflow and timely delivery of services.
+                    </li>
+                    <li>
+                        Assist in the preparation of sales presentations and proposals.
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <img src="pictures/admin_sales.png" alt="">
+    </div>
+
+    <div class="sales_partner">
+        <img src="pictures/sales_partner.png" alt="">
+        <div class="sales_partner_content">
+            <h2>Sales <span class="green">Partner</span></h2>
+            <p>Responsibilities:
+                <ul>
+                    <li>
+                        Develop and maintain relationships with clients, understanding their financial needs and offering tailored solutions.
+                    </li>
+                    <li>
+                        Identify new business opportunities and work to expand the client base.
+                    </li>
+                    <li>
+                        Collaborate with internal teams to ensure client satisfaction and successful implementation of services.
+                    </li>
+                    <li>
+                        Monitor market trends and competitor activities to adjust sales strategies accordingly.
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
+    <div class="telemarketing">
+        <div class="telemarketing_content">
+            <h2>Tele<span class="green">marketing</span></h2>
+            <p>Responsibilities:
+                <ul>
+                    <li>
+                        Conduct outbound calls to potential clients, introducing them to the services offered by JV Wealth Advisory.
+                    </li>
+                    <li>
+                        Qualify leads and schedule appointments for the sales team.
+                    </li>
+                    <li>
+                        Provide information to clients, answer questions, and handle objections.
+                    </li>
+                    <li>
+                        Maintain detailed records of interactions in the CRM system.
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <img src="pictures/telemarketing.png" alt="">
+    </div>
+
+    <div class="customer_services">
+        <img src="pictures/customer_services.png" alt="">
+        <div class="customer_services_content">
+            <h2>Customer <span class="green">Services</span></h2>
+            <p>Responsibilities:
+                <ul>
+                    <li>
+                        Serve as the primary point of contact for clients, addressing their inquiries, and resolving issues.
+                    </li>
+                    <li>
+                        Provide support during and after the sales process, ensuring client satisfaction.
+                    </li>
+                    <li>
+                        Manage client accounts, including updating information and processing requests.
+                    </li>
+                    <li>
+                        Work closely with other departments to ensure a seamless client experience.
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
+    <div class="internship">
+        <div class="internship_content">
+            <h2>Intern<span class="green">ship</span></h2>
+            <p>Responsibilities:
+                <ul>
+                    <li>
+                        Participate in meetings with clients, learning how to communicate effectively and understand client needs.
+                    </li>
+                    <li>
+                        Work closely with mentors and senior team members to gain hands-on experience and industry insights.
+                    </li>
+                    <li>
+                        Engage in team projects that contribute to the overall goals of the firm.
+                    </li>
+                    <li>
+                        Contribute to specific projects, such as market research, business development, or process improvement initiatives.
+                    </li>
+                    <li>
+                        Present findings and recommendations to the team, gaining experience in professional communication and presentation skills.
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <img src="pictures/internship.png" alt="">
+    </div>
+
+    <div class="requirement_benefit">
+        <div class="requirement">
+            <h2>Require<span class="green">ment</span></h2>
+            <ul>
+                <li>STPM and above</li>
+                <li>Proficient in Mandarin, English, and Malay (fluency not required)</li>
+                <li>Must have own transportation</li>
+                <li>Responsible</li>
+                <li>Good phone etiquette</li>
+                <li>Strong learning ability</li>
+                <li>Willing to learn sales</li>
+                <li>Basic PowerPoint and Excel</li>
+            </ul>
+        </div>
+        <div class="benefit">
+            <h2>Bene<span class="green">fit</span></h2>
+            <ul>
+                <li>Commission system</li>
+                <li>Comprehensive training program</li>
+                <li>Promotion opportunities</li>
+            </ul>
+        </div>
+        <div class="green_rec"></div>
+    </div>
+
     <div class="card_container">
         <div class="card">
             <img src="pictures/jvlogo.png" alt="">
