--- a/our_company.html
+++ b/our_company.html
@@ -39,38 +39,40 @@
     </header>
 
     <div class="our_company_title">
-        <img src="pictures/about_us_bg.png" alt="">
         <h2>Our Company</h2>
         <p>About us</p>
     </div>
 
     <div class="blue_background">
         <div class="ourcompany">
-            <h2>Welcome to JV Wealth Advisory</h2>
+            <h2>Welcome to JV <span class="green">Wealth Advisory</span></h2>
             <div class="ourcompany_background1">
                 <div class="ourcompany_background">
                     <p>JV Wealth Advisory is a company dedicated to providing comprehensive financial planning and wealth management services to clients. Headquartered in Taman Johor Jaya, Johor Bahru, Malaysia, the company is committed to helping clients achieve their financial goals while ensuring the growth and preservation of their wealth.
                         <br><br>
                         JV Wealth Advisory offers a wide range of services, including investment management, retirement planning, insurance consultation, tax planning, and estate planning. The company focuses on clients' needs, tailoring the most suitable financial solutions through its professional team. JV Wealth Advisory places particular emphasis on supporting single-parent families and elderly parents, offering guidance and support in their financial planning.
-                        <br><br>
-                        The company is currently expanding its team and is recruiting for various positions, including administrative sales, sales partners, telemarketing, and customer service assistants, aiming to further enhance its service capabilities.
+                    </p>
+                </div>
+                <img src="pictures/our_company_1.png" alt="">
+                <img src="pictures/our_company_2.png" alt="">
+                <div class="ourcompany_background">
+                    <p>His company is currently expanding its team and is recruiting for various positions, including administrative sales, sales partners, telemarketing, and customer service assistants, aiming to further enhance its service capabilities.
                         <br><br>
                         Under the leadership of Jason Liew and his team, JV Wealth Advisory continuously strives for excellence, ensuring that every client enjoys personalized financial advisory services, safeguarding the growth of their wealth.
                     </p>
                 </div>
-                <img src="2.png" alt="Image 1">
             </div>
-            <div class="ourcompany_content">
-                <div class="whyus">
-                    <h2>Why us ?</h2>
-                    <p>We offer customized financial solutions that are designed to meet your individual goals.
-                        Our team comprises seasoned professionals with extensive experience in the financial sector.</p>
-                </div>
-                <div class="commitment">
-                    <h2>Our Commitment</h2>
-                    <p>At JV Wealth Advisory, we believe in providing transparent, reliable, and professional financial advice. Our goal is to simplify complex financial decisions and help you navigate life's important financial milestones with confidence.</p>
-                </div>
-            </div>
+        </div>
+    </div>
+    <div class="ourcompany_content">
+        <div class="whyus">
+            <h2>Why us ?</h2>
+            <p>We offer customized financial solutions that are designed to meet your individual goals.
+                Our team comprises seasoned professionals with extensive experience in the financial sector.</p>
+        </div>
+        <div class="commitment">
+            <h2>Our Commitment</h2>
+            <p>At JV Wealth Advisory, we believe in providing transparent, reliable, and professional financial advice. Our goal is to simplify complex financial decisions and help you navigate life's important financial milestones with confidence.</p>
         </div>
     </div>
 
