--- a/career.html
+++ b/career.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +26,8 @@
                         </ul>
                     </li>
                     <li><a href="services.html" class="nav-link" id="servicesLink">Our Services</a></li>
-                    <li><a href="contact_us.html" class="nav-link" id="contactLink">Contact Us</a></li>                    
-                    <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>                    
+                    <li><a href="contact_us.html" class="nav-link" id="contactLink">Contact Us</a></li>
+                    <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>
 
                     <li>
                         <div class="language-switch">
@@ -38,24 +39,33 @@
         </div>
     </header>
 
+    <section class="services">
+    <div class="container">
+        <h2 class="serviceh2">HERE WE HAVE</h2>
+        <h3 class="serviceh3">Career</h3>
+        <p class="service-provide">JV Wealth Advisory need ......</p>
+    </div>
+    <img src="pictures/panda_icon1.png" alt="Panda Icon" class="panda-icon">
+    </section>
+
     <div class="admin_sales">
         <div class="admin_sales_content">
             <h2>Admin <span class="green">Sales</span></h2>
             <p>Responsibilities:
-                <ul>
-                    <li>
-                        Support the sales team by managing schedules, processing orders, and handling customer inquiries.
-                    </li>
-                    <li>
-                        Maintain sales records, prepare reports, and update the CRM system.
-                    </li>
-                    <li>
-                        Coordinate with other departments to ensure smooth workflow and timely delivery of services.
-                    </li>
-                    <li>
-                        Assist in the preparation of sales presentations and proposals.
-                    </li>
-                </ul>
+            <ul>
+                <li>
+                    Support the sales team by managing schedules, processing orders, and handling customer inquiries.
+                </li>
+                <li>
+                    Maintain sales records, prepare reports, and update the CRM system.
+                </li>
+                <li>
+                    Coordinate with other departments to ensure smooth workflow and timely delivery of services.
+                </li>
+                <li>
+                    Assist in the preparation of sales presentations and proposals.
+                </li>
+            </ul>
             </p>
         </div>
         <img src="pictures/admin_sales.png" alt="">
@@ -66,20 +76,22 @@
         <div class="sales_partner_content">
             <h2>Sales <span class="green">Partner</span></h2>
             <p>Responsibilities:
-                <ul>
-                    <li>
-                        Develop and maintain relationships with clients, understanding their financial needs and offering tailored solutions.
-                    </li>
-                    <li>
-                        Identify new business opportunities and work to expand the client base.
-                    </li>
-                    <li>
-                        Collaborate with internal teams to ensure client satisfaction and successful implementation of services.
-                    </li>
-                    <li>
-                        Monitor market trends and competitor activities to adjust sales strategies accordingly.
-                    </li>
-                </ul>
+            <ul>
+                <li>
+                    Develop and maintain relationships with clients, understanding their financial needs and offering
+                    tailored solutions.
+                </li>
+                <li>
+                    Identify new business opportunities and work to expand the client base.
+                </li>
+                <li>
+                    Collaborate with internal teams to ensure client satisfaction and successful implementation of
+                    services.
+                </li>
+                <li>
+                    Monitor market trends and competitor activities to adjust sales strategies accordingly.
+                </li>
+            </ul>
             </p>
         </div>
     </div>
@@ -88,20 +100,21 @@
         <div class="telemarketing_content">
             <h2>Tele<span class="green">marketing</span></h2>
             <p>Responsibilities:
-                <ul>
-                    <li>
-                        Conduct outbound calls to potential clients, introducing them to the services offered by JV Wealth Advisory.
-                    </li>
-                    <li>
-                        Qualify leads and schedule appointments for the sales team.
-                    </li>
-                    <li>
-                        Provide information to clients, answer questions, and handle objections.
-                    </li>
-                    <li>
-                        Maintain detailed records of interactions in the CRM system.
-                    </li>
-                </ul>
+            <ul>
+                <li>
+                    Conduct outbound calls to potential clients, introducing them to the services offered by JV Wealth
+                    Advisory.
+                </li>
+                <li>
+                    Qualify leads and schedule appointments for the sales team.
+                </li>
+                <li>
+                    Provide information to clients, answer questions, and handle objections.
+                </li>
+                <li>
+                    Maintain detailed records of interactions in the CRM system.
+                </li>
+            </ul>
             </p>
         </div>
         <img src="pictures/telemarketing.png" alt="">
@@ -112,20 +125,20 @@
         <div class="customer_services_content">
             <h2>Customer <span class="green">Services</span></h2>
             <p>Responsibilities:
-                <ul>
-                    <li>
-                        Serve as the primary point of contact for clients, addressing their inquiries, and resolving issues.
-                    </li>
-                    <li>
-                        Provide support during and after the sales process, ensuring client satisfaction.
-                    </li>
-                    <li>
-                        Manage client accounts, including updating information and processing requests.
-                    </li>
-                    <li>
-                        Work closely with other departments to ensure a seamless client experience.
-                    </li>
-                </ul>
+            <ul>
+                <li>
+                    Serve as the primary point of contact for clients, addressing their inquiries, and resolving issues.
+                </li>
+                <li>
+                    Provide support during and after the sales process, ensuring client satisfaction.
+                </li>
+                <li>
+                    Manage client accounts, including updating information and processing requests.
+                </li>
+                <li>
+                    Work closely with other departments to ensure a seamless client experience.
+                </li>
+            </ul>
             </p>
         </div>
     </div>
@@ -134,23 +147,26 @@
         <div class="internship_content">
             <h2>Intern<span class="green">ship</span></h2>
             <p>Responsibilities:
-                <ul>
-                    <li>
-                        Participate in meetings with clients, learning how to communicate effectively and understand client needs.
-                    </li>
-                    <li>
-                        Work closely with mentors and senior team members to gain hands-on experience and industry insights.
-                    </li>
-                    <li>
-                        Engage in team projects that contribute to the overall goals of the firm.
-                    </li>
-                    <li>
-                        Contribute to specific projects, such as market research, business development, or process improvement initiatives.
-                    </li>
-                    <li>
-                        Present findings and recommendations to the team, gaining experience in professional communication and presentation skills.
-                    </li>
-                </ul>
+            <ul>
+                <li>
+                    Participate in meetings with clients, learning how to communicate effectively and understand client
+                    needs.
+                </li>
+                <li>
+                    Work closely with mentors and senior team members to gain hands-on experience and industry insights.
+                </li>
+                <li>
+                    Engage in team projects that contribute to the overall goals of the firm.
+                </li>
+                <li>
+                    Contribute to specific projects, such as market research, business development, or process
+                    improvement initiatives.
+                </li>
+                <li>
+                    Present findings and recommendations to the team, gaining experience in professional communication
+                    and presentation skills.
+                </li>
+            </ul>
             </p>
         </div>
         <img src="pictures/internship.png" alt="">
@@ -188,7 +204,7 @@
                 <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
                 <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
                 <div class="card_info1">
-                    <p>+6011 - 1677 2315  |  +6012 - 720 0251</p>
+                    <p>+6011 - 1677 2315 | +6012 - 720 0251</p>
                     <p> Jvwealthadvisory@gmail.com</p>
                 </div>
             </div>
@@ -232,7 +248,7 @@
                 }
             });
             const aboutUsPages = ['our_company.html', 'v_m_v.html', 'achievement.html'];
-    
+
             if (aboutUsPages.includes(currentPage)) {
                 aboutUsLink.classList.add('active'); // 为"About Us"项添加 active 类
             }
@@ -240,4 +256,5 @@
     </script>
 </body>
 </body>
+
 </html>
