--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
             <div class="p_s_container">
                 <div class="p_s">
                     <h2>Financial Planning</h2>
-                    <img src="5.jpg" alt="">
+                    <img src="pictures/finance_image.png" alt="">
                 </div>
                 <div class="p_s">
                     <h2>Healthcare Planning</h2>
-                    <img src="5.jpg" alt="">
+                    <img src="pictures/healthcare_image.png" alt="">
                 </div>
                 <div class="p_s">
                     <h2>Legacy Planning</h2>
-                    <img src="5.jpg" alt="">
+                    <img src="pictures/legacy_image.png" alt="">
                 </div>
                 <div class="p_s">
                     <h2>Claim Support</h2>
-                    <img src="5.jpg" alt="">
+                    <img src="pictures/claim_image.png" alt="">
                 </div>    
             </div>
         </div>
