--- a/contact_us.html
+++ b/contact_us.html
@@ -38,6 +38,15 @@
         </div>
     </header>
 
+    <section class="services">
+        <div class="container">
+            <h2 class="serviceh2">HERE WE ARE</h2>
+            <h3 class="serviceh3">Contact <span class="green">Us</span></h3>
+            <p class="service-provide">JV Wealth Advisory located ........</p>
+        </div>
+        <img src="pictures/panda_icon1.png" alt="Panda Icon" class="panda-icon">
+        </section>
+
     <div class="card_container">
         <div class="card">
             <img src="pictures/jvlogo.png" alt="">
