--- a/services.html
+++ b/services.html
@@ -42,8 +42,8 @@
 
     <section class="services">
         <div class="container">
-            <h2 class="serviceh2">What We Do</h2>
-            <h3 class="serviceh3">Our Service</h3>
+            <h2 class="serviceh2">WHAT WE DO</h2>
+            <h3 class="serviceh3">Our <span class="green">Service</span></h3>
             <p class="service-provide">JV Wealth Advisory provides...</p>
             <div class="services-grid">
                 <div class="service-item">
