--- a/try.html
+++ b/try.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,16 +41,73 @@
             0% {
                 transform: translateX(0);
             }
+
             100% {
                 transform: translateX(-50%);
             }
         }
+
+        .carousel-container {
+            width: 100%;
+            /* 设置容器宽度 */
+            overflow: hidden;
+            /* 隐藏溢出的内容 */
+            position: relative;
+        }
+
+        .carousel {
+            display: flex;
+            justify-content: space-around;
+            animation: moveBackAndForth 10s ease-in-out infinite;
+            /* 来回动画 */
+        }
+
+        .carousel img {
+            width: 200px;
+            /* 设置图片宽度 */
+            height: auto;
+            margin-right: 20px;
+            /* 图片间距 */
+        }
+
+        /* 定义来回滚动的动画 */
+        @keyframes moveBackAndForth {
+            0% {
+                transform: translateX(0);
+                /* 起始位置 */
+            }
+
+            50% {
+                transform: translateX(-50%);
+                /* 中间位置，图片向左移动50% */
+            }
+
+            100% {
+                transform: translateX(0);
+                /* 返回到起始位置 */
+            }
+        }
     </style>
 </head>
+
 <body>
     <div class="wave-container">
         <div class="wave"></div>
         <div class="wave"></div>
     </div>
+
+    <div class="carousel-container">
+        <div class="carousel">
+            <img src="pictures/mission.png" alt="">
+            <img src="pictures/legacy_image.png" alt="">
+            <img src="pictures/finance_image.png" alt="">
+            <img src="pictures/mission.png" alt="">
+            <img src="pictures/mission.png" alt="">
+            <img src="pictures/legacy_image.png" alt="">
+            <img src="pictures/finance_image.png" alt="">
+            <img src="pictures/mission.png" alt="">
+        </div>
+    </div>
 </body>
+
 </html>
