--- a/contact_us.html
+++ b/contact_us.html
@@ -45,11 +45,38 @@
             <p class="service-provide">JV Wealth Advisory located ........</p>
         </div>
         <img src="pictures/panda_icon1.png" alt="Panda Icon" class="panda-icon">
-        </section>
+    </section>
+
+    <div class="address">
+        <div class="address_content">
+            <img src="pictures/map_pin.png" alt="">
+            <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.392090247788!2d103.79297290852733!3d1.5320354209289218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da6c40cbf98875%3A0x582fac6b6382e3ef!2s21-02%2C%20Jalan%20Ros%20Merah%202%2F8%2C%20Taman%20Johor%20Jaya%2C%2081100%20Johor%20Bahru%2C%20Johor!5e0!3m2!1szh-CN!2smy!4v1726119458402!5m2!1szh-CN!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <div class="enquiry">
+        <div class="enquiry_content">
+            <div class="enquiry_content_bg">
+                <h2>Let’s get in touch >>></h2>
+                <p>
+                    We welcome your questions and feedback! Feel free to submit your questions through the form beside, or alternatively, you can email us at  Jvwealthadvisory@gmail.com. We'll do our best to reply as soon as possible.
+                    <br><br>To learn more about us, you can visit our official Facebook page...
+                </p>
+                <img class="fb_qr_code" src="pictures/fb_qr_code.png" alt="">
+            </div>
+            <div class="triangle_container">
+                <div class="triangle"></div>
+                <div class="triangle2"></div>
+            </div>
+        </div>
+        <div class="form">
+            
+        </div>
+    </div>
 
     <div class="card_container">
         <div class="card">
-            <img src="pictures/jvlogo.png" alt="">
             <div class="card_info">
                 <h2>JV WEALTH ADVISORY <span class="small">(JM002937617-D)</span></h2>
                 <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
