--- a/our_company.html
+++ b/our_company.html
@@ -19,9 +19,9 @@
                     <li>
                         <a href="#" class="nav-link" id="aboutUsLink">About Us</a>
                         <ul id="dropdownMenu" class="dropdown">
-                            <li><a href="our_company.html">Our Company</a></li>
-                            <li><a href="v_m_v.html">Vision, Mission & Value</a></li>
-                            <li><a href="achievement.html">Achievement</a></li>
+                            <a href="our_company.html"><li>Our Company</li></a>
+                            <a href="v_m_v.html"><li>Vision, Mission & Value</li></a>
+                            <a href="achievement.html"><li>Achievement</li></a>
                         </ul>
                     </li>
                     <li><a href="services.html" class="nav-link" id="servicesLink">Our Services</a></li>
